Добавлен сырой PDF-парсер,исправлены мелкие огрехи