@@ -2,6 +2,7 @@ import org.example.BankJSONParser;
 import org.example.BankStatementParser;
 import org.example.BankTransaction;
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
 
 import java.time.LocalDate;
@@ -10,14 +11,22 @@ import java.util.List;
 
 public class BankJSONParserTest {
     private final BankStatementParser statementParser = new BankJSONParser();
-    private final List<String> lines = new ArrayList<>();
+    List<String> lines;
+
+
+    @Before
+    public void setUp () {
+        lines = new ArrayList<>();
+    }
 
     @Test
     public void shouldParseAndCreateACorrectObjectsFromOneLine () {
+
         lines.add("[");
         lines.add("{\"date\": \"01-01-2023\", \"amount\": -250, \"category\": \"Страховка\"},");
         lines.add("{\"date\": \"08-01-2023\", \"amount\": -240, \"category\": \"Коммунальные услуги\"},");
         lines.add("{\"date\": \"11-01-2023\", \"amount\": -130, \"category\": \"Продукты\"},");
+        lines.add("]");
 
         List<BankTransaction> result = statementParser.parseLinesFrom(lines);
         List<BankTransaction> expected = new ArrayList<>();
@@ -32,15 +41,19 @@ public class BankJSONParserTest {
 
     @Test
     public void shouldParseAndCreateACorrectObjectsFromDifferentLines () {
+
+        lines.add("[");
+        lines.add("{");
         lines.add("\t\"date\": \"06-01-2023\",");
         lines.add("\t\"amount\": -290, ");
         lines.add("\t\"category\": \"Одежда\"");
-        lines.add("    },");
+        lines.add("}");
+        lines.add("]");
 
         List<BankTransaction> result = statementParser.parseLinesFrom(lines);
         List<BankTransaction> expected = new ArrayList<>();
         expected.add(new BankTransaction(LocalDate.parse("06-01-2023", BankStatementParser.DATE_PATTERN), -290, "Одежда", true, null));
 
-        Assert.assertEquals(expected.getFirst(), result.getFirst());
+        Assert.assertEquals(expected.get(0), result.get(0));
     }
 }
